# OLLAP

./: .gitignore  Readme.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  batch_ingest.py  embeddings.py  flashcards.py  ingest.py  llm.py  main.py  models.py  retriever.py
backend/documents/chemistry/: AS_and_A_Level.txt
backend/documents/maths/: A-level-Maths.txt
backend/documents/physics/: A_Level.txt
frontend/: bun.lockb  package.json  pnpm-lock.yaml
frontend/api/chat/: route.ts
frontend/api/flashcards/: route.ts
frontend/api/subjects/: route.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/flashcards/: route.ts
frontend/app/api/subjects/: route.ts
frontend/app/chat/[sessionId]/: page.tsx
frontend/app/subjects/: page.tsx
frontend/components/: canvas-viewer.tsx  flashcard-compact.tsx  flashcard-viewer.tsx  message-bubble.tsx  message-composer.tsx  message-list.tsx  saved-flashcards-viewer.tsx  sidebar.tsx
frontend/lib/: api-schemas.ts  latex-cleaner.ts  saved-flashcards.ts  store.ts  streamChat.ts
