[project]
name = "backend"
version = "0.1.0"
description = "FastAPI RAG Backend with Qdrant and OpenAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "qdrant-client>=1.7.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "pdfplumber>=0.10.0",
    "PyPDF2>=3.0.0",
    "python-multipart>=0.0.20",
    "tqdm>=4.66.0",
    "anyio>=3.8.0",
    "llama-index>=0.10.0",
    "llama-index-vector-stores-qdrant>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "llama-index-readers-file>=0.1.0",
]
